--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.hyuga0410</groupId>
-    <artifactId>lombok-enums-component</artifactId>
+    <artifactId>lombok-enum-component</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <developers>
